2010-11-16  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Simon Fraser.

        CSSPrimitiveValue.getFloatValue does not convert sizes
        https://bugs.webkit.org/show_bug.cgi?id=35770

        Extended getFloatValueForUnit and CSSPrimitiveValue tests. The former has been made text-only,
        which allowed to get rid of a number of unnecessary baselines.

        * fast/css/CSSPrimitiveValue-exceptions-expected.txt:
        * fast/css/getFloatValueForUnit-expected.txt: Added.
        * fast/css/getFloatValueForUnit.html:
        * fast/css/resources/CSSPrimitiveValue-exceptions.js:
        * platform/chromium-linux/fast/css/getFloatValueForUnit-expected.checksum: Removed.
        * platform/chromium-win/fast/css/getFloatValueForUnit-expected.checksum: Removed.
        * platform/chromium-win/fast/css/getFloatValueForUnit-expected.txt: Removed.
        * platform/mac-leopard/fast/css/getFloatValueForUnit-expected.checksum: Removed.
        * platform/mac/fast/css/getFloatValueForUnit-expected.checksum: Removed.
        * platform/mac/fast/css/getFloatValueForUnit-expected.txt: Removed.
        * platform/qt/fast/css/getFloatValueForUnit-expected.txt: Removed.
2010-11-16  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Simon Fraser.

        CSSPrimitiveValue.getFloatValue does not convert sizes
        https://bugs.webkit.org/show_bug.cgi?id=35770

        Implemented all same-category unit conversions (length, angle, time, frequency) and retained
        absolute-relative (cm, mm, in, pt, pc) length conversions intact.
        Illegal unit conversion attempts will throw an INVALID_ACCESS_ERR DOMException.

        * css/CSSPrimitiveValue.cpp:
        (WebCore::unitCategory):
        (WebCore::conversionToCanonicalUnitsScaleFactor):
        (WebCore::CSSPrimitiveValue::getDoubleValue):
        (WebCore::CSSPrimitiveValue::canonicalUnitTypeForCategory):
        (WebCore::CSSPrimitiveValue::getDoubleValueInternal):
        (WebCore::CSSPrimitiveValue::getIdent):
        * css/CSSPrimitiveValue.h:
        (WebCore::CSSPrimitiveValue::getFloatValue):
        (WebCore::CSSPrimitiveValue::getIntValue):

Canonical link: https://commits.webkit.org/62651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72189 268f45cc-cd09-0410-ab3c-d52691b4dbfc